--- a/to-do-app/components/TodoList.module.css
+++ b/to-do-app/components/TodoList.module.css
@@ -1,13 +1,29 @@
-.todoListContainer {
-
+.todoList {
+    width: 100%;
+    max-width: 540px;
+    background: white;
+    margin: 100px auto 20px;
+    padding: 40px 30px 40px;
+    border-radius: 10px;
 }
 
 .todoListItem {
     display: flex;
     align-items: center;
+    margin: 0px 0px 20px 0px;
+    justify-content: space-between;
 }
-.todoListItem img:hover {
+.todoListItem div {
+    display: flex;
+    align-items: center;
+}
+.todoListItem img {
     cursor: pointer;
+    margin: 10px;
+}
+.editDeleteContainer {
+    display: flex;
+    align-items: center;
 }
 
 .completedTitle {
@@ -18,17 +34,75 @@
     display: flex;
     align-items: center;
     justify-content:space-between;
-    outline: 1px solid gray;
-    width: 300px;
-    height: 40px;
-    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+    padding-left: 20px;
+    border-radius: 30px;
+    margin-top: 10px;
+    margin-bottom: 25px;
 }
 .inputContainer input {
     border: none;
     outline: none;
+    background: transparent;
+    flex: 1;
 }
 .inputContainer button {
-    padding: 10px;
+    border: none;
+    outline: none;
+    padding: 16px 50px;
+    color: white;
     float: right;
-    border-radius: 5px;
+    cursor: pointer;
+    border-radius: 30px;
+    background-color: #E65064;
+}
+
+.popupOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    display: felx;
+    align-items: center;
+    justify-content: center;
+    z-index: 500;
+}
+.popup {
+    background: white;
+    margin: 300px;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    min-width: 300px;
+}
+.popup input {
+    border: 1px solid gray;
+    padding: 10px;
+    border-radius: 15px;
+    outline: none;
+    background: transparent;
+}
+.popupButtons {
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+.cancelButton {
+    padding: 10px 10px;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    background-color: rgb(168, 168, 168);
+    cursor: pointer;
+}
+.submitButton {
+    padding: 10px 10px;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    background-color: #E65064;
+    cursor: pointer;
 }
