--- a/to-do-app/components/TodoList.module.css
+++ b/to-do-app/components/TodoList.module.css
@@ -64,18 +64,17 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.4);
-    display: felx;
+    display: flex;
     align-items: center;
     justify-content: center;
     z-index: 500;
 }
 .popup {
     background: white;
-    margin: 300px;
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    min-width: 300px;
+    width: 400px;
 }
 .popup input {
     border: 1px solid gray;
